--- a/themes/hamiltonian/layouts/_default/baseof.html
+++ b/themes/hamiltonian/layouts/_default/baseof.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>{{ block "title" . }}{{ .Site.Title }}{{end}}</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
   </head>
 
   <body>
   
   <header>
-  {{ block "header" . }}{{ end }}
+  {{ block "header" . }}
+  
+  <h1>{{ .Site.Title }}</h1>
+  
+  {{ end }}
   </header>
   
   <main>
