--- a/themes/hamiltonian/static/css/style.css
+++ b/themes/hamiltonian/static/css/style.css
@@ -1,6 +1,31 @@
+body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
+    margin: 0;
+    padding: 0;
+}
+
 body {
+  margin: 0;
+  padding: 0;
+  color: #111;
   font-family: Arial;
   font-size: 11;
-  color: #111;
   background-color: #f9f9f9;
+}
+
+header, main, footer {
+    max-width: 1300px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    margin-right: auto;
+    margin-left: auto;  
+    background-color: white;
+}
+
+header {
+  display: box;
+  box-sizing: border-box;
+  background: #000 url("../img/map.png") no-repeat top left fixed;
+  background-size: 100%;
+  height: 5em;
 }
