--- a/themes/hamiltonian/layouts/_default/baseof.html
+++ b/themes/hamiltonian/layouts/_default/baseof.html
@@ -11,7 +11,8 @@
   <header>
   {{ block "header" . }}
   
-  <h1>{{ .Site.Title }}</h1>
+  <h1><a href="/">{{ .Site.Title }}</a></h1>
+  <div></div>
   
   {{ end }}
   </header>
