--- a/themes/hamiltonian/static/css/style.css
+++ b/themes/hamiltonian/static/css/style.css
@@ -1,56 +1,170 @@
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0;
+  font-weight:normal;
+  color: #111;
 }
-
 body {
   margin: 0;
   padding: 0;
   border-top: 5px solid #BB0000;
-  color: #111;
-  font-family: Futura, Gill Sans, URW Gothic, Akkurat;
-  font-size: 11;
-  background-color: #f9f9f9;
+  font-family: Fira Sans, Futura, Gill Sans, URW Gothic, Akkurat;
+  font-size: 11pt;
+  background-color: #f1f1f1;
 }
-
 header, main, footer {
-  max-width: 1300px;
+  max-width: 1000px;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 0;
-}
-
-header > h1 {
-  padding: 1em 2em;
-  font-size: 1.3em;
-  font-weight: normal;
-}
-
-header > a {
-  color: #111;
-}
-header > a:visited {
-  color: #111;
-}
-
-
-header > div {
-  width: 100%;
-  height: 7em;
-  border-top: 3px solid #616161;
-  background: #000 url("../img/map.png") no-repeat top left scroll;
-  background-size: 1300px auto;
-}
-
-
-main {
-  padding: 2em;
   background-color: white;
 }
+a, a:visited {
+  color: #990000;
+}
+
+
+/* HEADER */
+
+header > h1 {
+  padding: 0.6em 1em 0.5em 1.8em;
+  margin: 0 0 0 0.6em;
+  font-family: URW Gothic;
+  font-size: 1.2em;
+  font-weight: normal;
+  background: url("../img/icon/icon.svg") left center no-repeat;
+  background-size: 1.2em 1.2em;
+  
+}
+header a, header a:visited {
+  color: #111;
+  text-decoration: none;
+}
+header > div {
+  width: 100%;
+  height: 6em;
+  border-top: 3px solid #616161;
+  background: #fff url("../img/default-banner.png") no-repeat top left scroll;
+  background-size: 1000px auto;
+}
+
+
+/* MAIN */
+
+main {
+  padding: 1em 2em 3em 220px;
+  padding-left: 220px;
+  background-color: white;
+}
+main h2 {
+  font-size: 1.2em;
+  margin-bottom:1em;
+}
+
+/* ARTICLE LIST */
+.post-list {
+  
+}
+.post-list article {
+  margin-bottom: 3em;
+  font-family: Fira Serif;
+}
+.post-list h3 a {
+  font-family: URW Gothic;
+  font-size: 1.2em;
+  text-decoration: none;
+}
+.post-list h3 a:hover {
+  text-decoration: underline;
+}
+.post-list span {
+  color: #555555;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
+/* ARTICLE */
+article p {
+  margin-bottom: 1em;
+}
+
+
+/* BOXES */
+.box {
+	padding: 10px;
+	margin-bottom: 1em;
+	transition: all 0.3s;
+	border-left: 5px solid #555555;
+	
+/*	>:first-child:before { font-weight:bold; }
+	>:last-child { margin-bottom: 0; }
+	.content>:last-child { margin-bottom: 0; }*/
+}
+
+.box>.title {
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.box>.reference {
+  display: block;
+  float: right;
+  margin-left: -5em;
+  color: #b0b0b0;
+  font-family: monospace;
+}
+
+.theorem {
+  border-left: 5px solid purple;
+  background-color: #fff0ff; }
+
+.proposition {
+  border-left: 5px solid purple;
+  background-color: #fff0ff; }
+
+.example {
+  border-left: 5px solid darkgreen;
+  background-color: #e4ffe4; }
+
+.definition {
+  border-left: 5px solid #BB0000;
+  background-color: #ffeeee; }
+
+.note {
+  border-left: 5px solid darkblue;
+  background-color: #e2e2ff; }
+
+.morebox > .moreboxslide {
+  overflow: hidden;
+  max-height: 0;
+  margin-bottom: 0; }
+
+.moreboxtitle {
+  font-style: italic;
+  text-align: center;
+  cursor: default; }
+  .moreboxtitle::before {
+    content: "▸ "; }
+
+.morebox:hover > .moreboxslide {
+  max-height: 500em; }
+.morebox:hover .moreboxtitle::before {
+  content: "▾ "; }
+
+/* FOOTER */
 
 footer {
   height: 7em;
+  padding: 1.5em;
   border-top: 3px solid #BB0000;
   background: #616161 url("../img/footer.png") no-repeat scroll center top;
   color: white;
+}
+footer h2 {
+  font-size: 1em;
+  color: white;
+  font-weight: bold;
+}
+footer div {
+  font-family: Fira Serif;
 }
