further work in progress

--- a/themes/hamiltonian/layouts/_default/baseof.html
+++ b/themes/hamiltonian/layouts/_default/baseof.html
@@ -26,9 +26,11 @@
   {{ end }}
   </header>
   
+  <div id="wrapper">
   <main>
   {{ block "main" . }}{{ end }}
   </main>
+  </div>
 
   <footer>
   {{ block "footer" . }}
