--- a/themes/hamiltonian/layouts/_default/baseof.html
+++ b/themes/hamiltonian/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="{{ "img/icon/icon180.png" | relURL }}" sizes="180x180" type="image/png">
     <link rel="icon" href="{{ "img/icon/icon.svg" | relURL }}" sizes="any" type="image/svg+xml">
     
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    {{ partial "math-rendering.html" }}
   </head>
 
   <body>
