--- a/themes/hamiltonian/static/css/style.css
+++ b/themes/hamiltonian/static/css/style.css
@@ -8,8 +8,8 @@ body {
   margin: 0;
   padding: 0;
   border-top: 5px solid #BB0000;
-  font-family: Fira Sans, sans;
-  font-size: 10pt;
+  font-family: Fira Sans, sans-serif;
+  font-size: 0.8em;
   background-color: #f1f1f1;
 }
 header, #wrapper, footer {
@@ -26,7 +26,7 @@ a, a:visited {
 
 /* HEADER */
 header > h1 {
-  padding: 0.6em 1em 0.5em 1.8em;
+  padding: 0.7em 1em 0.4em 1.8em;
   margin: 0 0 0 0.6em;
   font-family: URW Gothic;
   font-size: 1.2em;
@@ -54,7 +54,6 @@ main {
   width: 80%;
   margin-left: auto;
   background-color: white;
-  font-family: Fira Serif;
   text-align: justify;
 }
 main h2 {
@@ -76,23 +75,63 @@ main h2 {
   text-decoration: underline;
 }
 .post-list span {
-  color: #555555;
-  font-size: 0.8em;
+  color: #666666;
+  font-family: Fira Sans, sans-serif;
+  font-size: 0.85em;
   font-weight: bold;
 }
 
 /* ARTICLE */
 article {
-  font-family: Fira Serif;
+  font-family: serif;
 }
-article p {
+article p, article div {
   margin-top: 0;
   margin-bottom: 1em;
 }
-article h2 {
+article h1 {
   margin-bottom: 1em;
   font-family: Fira Sans, sans-serif;
 }
+article h2 {
+  margin: 1.5em 0 1em 0;
+  font-family: Fira Sans, sans-serif;
+}
+article h2::before {
+  content: "# ";
+  color: #999999;
+}
+
+/* CONTENT */
+.float-left {  float: left; }
+.float-right {  float: right; }
+.width-half { width: 50%; }
+.width-third { width: 33%; }
+.width-40 { width: 40%; }
+
+table {
+  margin: 1em auto;
+  text-align:center;
+  border-collapse: collapse;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+tbody {
+  border-top: 2px solid black;
+}
+tbody tr:nth-child(odd) {
+  background-color: #eedddd;
+}
+th, td {
+  text-align:center;
+  padding:0.5em 1em;
+}
+figure {
+  margin: 1em;
+  font-size: smaller;
+  text-align: center;
+}
+figure>img{ width:100%;  }
 
 /* BOXES */
 .box {
@@ -100,11 +139,8 @@ article h2 {
 	margin-bottom: 1em;
 	transition: all 0.3s;
 	border-left: 5px solid #555555;
-	
-/*	>:first-child:before { font-weight:bold; }
-	>:last-child { margin-bottom: 0; }
-	.content>:last-child { margin-bottom: 0; }*/
 }
+.box>:last-child { margin-bottom: 0; }
 
 .box .title {
   font-weight: bold;
@@ -146,10 +182,14 @@ article h2 {
   .moreboxtitle::before {
     content: "▸ "; }
 
-.morebox:hover > .moreboxslide {
-  max-height: 500em; }
-.morebox:hover .moreboxtitle::before {
-  content: "▾ "; }
+.morebox:hover > .moreboxslide { max-height: 500em; }
+.morebox:hover .moreboxtitle::before { content: "▾ "; }
+
+
+/* KATEX */
+.math, .katex { font-size: 1em !important; }
+div>.katex, div.math { font-size: 1.04em !important; }
+
 
 /* FOOTER */
 
